--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
-
 {
   "name": "afk-voice-bot",
-  "version": "1.0.0",
-  "description": "Discord AFK Voice Bot 24/7 (Railway)",
+  "version": "2.0.0",
+  "description": "Discord AFK Voice Bot 24/7 (discord.js v15)",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@discordjs/voice": "^0.16.0",
-    "discord.js": "^14.14.1",
+    "discord.js": "^15.0.0",
+    "@discordjs/voice": "^0.17.0",
     "ffmpeg-static": "^5.2.0",
     "dotenv": "^16.4.5"
   }
