--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afk-voice-bot",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -8,6 +8,7 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "@discordjs/voice": "^0.17.0",
+    "opusscript": "^0.1.1",
     "dotenv": "^16.4.5"
   }
 }
